--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
+    "forever:start": "cross-env NODE_ENV=production forever start build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
@@ -18,6 +19,7 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.9.0",
     "mysql2": "^1.6.1",
     "node-sass": "^4.9.3",
     "nuxt": "latest",
