--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.2",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.18.0",
     "cross-env": "^5.0.1",
     "element-ui": "^2.4.6",
